Archive2/d7/0bda2de4082be0/output
main.cpp:27:5: error: static_assert failed "le fail"
    static_assert(exists<int>::value, "le fail");
    ^             ~~~~~~~~~~~~~~~~~~
1 error generated.
